refactor particle renderers